# aoc2024

./: .gitignore  README.md  config.py  pyproject.toml  run.sh  setup.py
2024/src/day01/: part_1.py  part_1_cleaned.py  part_2.py  part_2_cleaned.py
2024/src/day01/tests/: test_part_1.py  test_part_2.py
2024/src/day02/: part_1.py  part_2.py
2024/src/day02/tests/: test_part_1.py  test_part_2.py
advent_of_code/: pyproject.toml
advent_of_code/src/day01/: part_1.py  part_1_cleaned.py  part_2.py  part_2_cleaned.py
advent_of_code/src/day01/lib/: parsing.py
advent_of_code/src/day01/tests/: test_part_1.py  test_part_2.py
advent_of_code/src/day02/: part_1.py  part_2.py
advent_of_code/src/day02/tests/: test_part_1.py  test_part_2.py
advent_of_code/src/day03/: part_1.py  part_2.py
advent_of_code/src/day03/tests/: test_part_1.py  test_part_2.py
advent_of_code/src/day04/: part_1.py  part_2.py
advent_of_code/src/day04/tests/: test_part_1.py  test_part_2.py
advent_of_code/src/day06/: notes.md  part_1.py  part_2.py
advent_of_code/src/day06/tests/: test_part_1.py  test_part_2.py
advent_of_code/src/day07/: part_1.py  part_2.py
advent_of_code/src/day07/tests/: test_part_1.py  test_part_2.py
lib/: pyproject.toml
lib/src/: windowing.py
setup/: setup.py
template/: part_1.py  part_2.py
template/tests/: test_part_1.py  test_part_2.py
