[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.1",
    "pytest-watcher>=0.4.3",
    "pytest>=8.3.3",
    "rich>=13.9.4",
]

[tool.uv.sources]
lib = { workspace = true }

[tool.uv.workspace]
members = ["lib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
